Remove some  # pragma: no cover in utils.py as these functions can be tested and covered + [CSS] display pod-info-video__signal with --bs-danger color to avoid confusion with an information link + remove useless coverage call in makefile

--- a/pod/main/static/css/pod.css
+++ b/pod/main/static/css/pod.css
@@ -1214,6 +1214,7 @@ body {
 .pod-btn-share i,
 .pod-info-video__signal i {
   transition: all 0.2s ease-in;
+  display: inline-block;
 }
 
 .pod-btn-share:hover i,
@@ -1221,12 +1222,15 @@ body {
 .pod-info-video__signal:focus i,
 .pod-info-video__signal:hover i {
   transform: rotate(15deg);
-  color: var(--pod-primary);
-  display: inline-block;
 }
 
 .pod-info-video__signal {
-  font-size: 2rem;
+  color: var(--bs-danger);
+  font-size: 1.5rem;
+}
+.pod-info-video__signal:focus i,
+.pod-info-video__signal:hover i {
+  color: var(--bs-danger);
 }
 
 .pod-navbar__container {
